--- a/Neutral/templates/foodRecord.html
+++ b/Neutral/templates/foodRecord.html
@@ -132,8 +132,8 @@
                             <td style = 'text-align:center'>{{food.food_protein}}</td>
                             <td style = 'text-align:center'>{{food.food_sodium}}</td>
                             <td style = 'text-align:center'>{{food.food_fibres}}</td>
-                            <td class = "text-right"><button class="btn btn-primary editbtn"  data-toggle="editmodal" data-target="#edit"><i class="fa fa-pencil-square"></i></button>
-                                                     <button class="btn btn-primary deletebtn" id = "delete"><i class="fa fa-trash"></i></button></td>
+                            <td class = "text-right"><button class="btn btn-primary btn-sm editbtn"  data-toggle="editmodal" data-target="#edit"><i class="fa fa-pencil-square"></i></button>
+                                                     <button class="btn btn-primary btn-sm deletebtn" id = "delete"><i class="fa fa-trash"></i></button></td>
                         </tr>
                     </tbody>
                     {% endfor %}
