--- a/Neutral/templates/addFoodRecord.html
+++ b/Neutral/templates/addFoodRecord.html
@@ -10,7 +10,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="{{url_for('static', filename='search.css')}}">
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='styles/search.css') }}" />
 {% endblock %}
 
 {% block content %}
@@ -84,19 +84,26 @@
         
         <div class = 'row first-row'>
             <div style="clear: both">
-                <h2 style="float: left" >Add  :</header>
-                <h2 style="float: left" id = "meal">{{meal}}</header>
+                <h2 style="float: left" id = "meal" >Add {{meal}} </header>
             </div>
         </div>
         
         <div class="row">
             <form method="POST" action=""  class="main-form">
-            <dl class="col-md-10 col-lg-10">
-                {{ form.csrf_token }}
-                {{ wtf.form_field(form.foodname) }}
-            </dl>
-            <input class="searchbutton" type="image" src="../static/images/search.png" width="20" height="20" alt="Submit" />
-            <button class="btn btn-primary anybutton" id = 'quickadd' style = "width:110px;"><span class="glyphicon glyphicon-plus-sign"></span> Quick Add </button></td>
+                <div class="parent">
+                    <div class="food-record-add">
+                        <dl class="col-md-9 col-lg-9 ">
+                            {{ form.csrf_token }}
+                            {{ wtf.form_field(form.foodname) }}
+                        </dl>
+                    </div>
+                    <div class="add-div">
+                        <input class="searchbutton food-record-search" type="image" src="../static/images/search.png" width="20" height="20" alt="Submit"/>
+                    </div>
+                    <div class="add-div">
+                        <button class="btn btn-primary anybutton btn-lg" id = 'quickadd'><span class="glyphicon glyphicon-plus-sign"></span> Quick Add </button>
+                    </div>
+                </div>
             </form>
         </div>
         {% if foodList %}
@@ -130,7 +137,7 @@
                         <td>{{food.food_protein}}</td>
                         <td>{{food.food_sodium}}</td>
                         <td>{{food.food_fibres}}</td>
-                        <td class = "text-right"><button class="btn anybutton" style = "width:100px;"><span class="glyphicon glyphicon-plus-sign"></span> Add Food </button></td>
+                        <td class = "text-right"><button class="btn btn-success" style = "width:100px;"><span class="glyphicon glyphicon-plus-sign"></span> Add Food </button></td>
                     </tr>
                 </tbody>
             </table>
