changed the path

--- a/Neutral/templates/layout.html
+++ b/Neutral/templates/layout.html
@@ -31,10 +31,10 @@
       </div>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="navbarcolor nav-link" href="{{ url_for('home') }}"><img src="static/images\home.png" class="small-icons"> Home</a>
+          <a class="navbarcolor nav-link" href="{{ url_for('home') }}"><img src="../static/images\home.png" class="small-icons"> Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="{{ url_for('displayFoodRecord') }}" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="static/images\food.png" class="small-icons">
+          <a class="nav-link dropdown-toggle" href="{{ url_for('displayFoodRecord') }}" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../static/images\food.png" class="small-icons">
              Food
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -44,10 +44,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('account') }}"><img src="static/images\default profile pic.png" class="small-icons"> Profile</a>
+          <a class="nav-link" href="{{ url_for('account') }}"><img src="../static/images\default profile pic.png" class="small-icons"> Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('logout') }}"><img src="static/images\logout.png" class="small-icons"> Logout</a>
+          <a class="nav-link" href="{{ url_for('logout') }}"><img src="../static/images\logout.png" class="small-icons"> Logout</a>
         </li>
       </ul>
     </div>
