--- a/Neutral/templates/foodRecord.html
+++ b/Neutral/templates/foodRecord.html
@@ -148,11 +148,11 @@
                     
                 </script>
         <div class="row">
-            <div class="md-form">
+            <div class="md-form col-6">
                 <form action="" method="POST">
                     {{ form.csrf_token }}
                     {{ wtf.form_field(form.fooddate)}}
-                    <input type="submit" alt="Submit" />
+                    <button class="btn btn-primary btn-lg" type="submit" alt="Submit">Submit</button>
                 </form>
             </div>
         </div>
